--- a/styles.css
+++ b/styles.css
@@ -228,13 +228,30 @@ main {
   background-color: #58CE7B;
   border-radius: 50%;
 }
+
+
+/* Footer diseño A² Vission */
 .footer {
+  background-color: #2bea4b;
+  padding: 10px 20px;
+  margin: 0 20px 20px 20px;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
   text-align: center;
-  padding: 15px;
-  background-color: #ffffff;
-  color: #444;
+}
+
+.footer .footer-content p {
+  margin: 0;
   font-size: 14px;
-  font-weight: normal;
-  border-top: 1px solid #ddd;
-  margin-top: 40px;
+  font-weight: bold;
+  color: #333;
+}
+
+.footer .footer-content a {
+  color: #1848f8;
+  text-decoration: none;
+}
+
+.footer .footer-content a:hover {
+  color: #fff;
 }
